from absolute to relative path changed

--- a/prep-html-links/contact-us/contact-us.html
+++ b/prep-html-links/contact-us/contact-us.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Contact Us</h1>
-<a href ="file:///Users/jeffreyneiljuarez/repos/prep-0421-code-solutions/prep-html-links/contact-us/home-page.html">Click here to go to Home Page</a>
+<a href ="home-page.html">Click here to go to Home Page</a>
 </body>
 </html>
