--- a/prep-html-links/contact-us/home-page.html
+++ b/prep-html-links/contact-us/home-page.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Home Page</h1>
-  <a href= "file:///Users/jeffreyneiljuarez/repos/prep-0421-code-solutions/prep-html-links/contact-us/contact-us.html">Click here to go to Contact Us</a>
+  <a href= "contact-us.html">Click here to go to Contact Us</a>
 </body>
 </html>
