--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -9,10 +9,15 @@
 <body>
   <script>
     var fullName = 'Jeffrey Neil Juarez';
+      console.log(fullName);
     var numberOfPets = 2;
+      console.log(numberOfPets);
     var likesVegetables = true;
+      console.log(likesVegetables);
     var nothing = null;
+      console.log(nothing);
     var never
+      console.log(never);
   </script>
 </body>
 </html>
